--- a/面试整理/面试总结/腾讯.html
+++ b/面试整理/面试总结/腾讯.html
@@ -45,3 +45,28 @@ setTimeout-1
 */
 
 页面内有一个正方形元素，实现对其拖拽和放下，需要考虑窗口的边界情况
+
+function f0() {
+    var a = 1;
+    f1();
+}
+
+function f1() {
+    console.log(a);
+}
+
+f0();
+-----------------------------------------------
+
+有A,B两个用户
+a.js 24KB
+
+A(深圳) =》 C（服务器，广州，100KM） 2M  带宽
+
+B(深圳) =》 D（服务器，哈尔滨，4000KM）100M 带宽
+
+-------------------------------------------------------
+有一个天平，140克盐， 2克、7克砝码各一个，
+天平只能用三次，前提一边一定要确定重量，最后得出50克、90克盐
+----------------------------------------------------
+烧烤架子，同时可以烤2片肉，每一片肉每一面要烤10分钟才能熟，3片肉，最快多少分钟烤熟
