--- a/面试整理/节流和防抖.html
+++ b/面试整理/节流和防抖.html
@@ -2,6 +2,9 @@
   在第一次触发事件时，不立即执行函数，而是给出一个期限值比如200ms，然后：
     * 如果在200ms内没有再次触发滚动事件，那么就执行函数
     * 如果在200ms内再次触发滚动事件，那么当前的计时取消，重新开始计时
+
+    防抖例子，像仿百度搜索，就应该用防抖，当我连续不断输入时，不会发送请求；当我一段时间内不输入了，才会发送一次请求；
+    如果小于这段时间继续输入的话，时间会重新计算，也不会发送请求。
     
     function debounce(fn, delay) {
       let timer = null
@@ -36,6 +39,8 @@
 2、节流
   如果短时间内大量触发同一事件，那么在函数执行一次之后，该函数在指定的时间期限内不再工作，直至过了这段时间才重新生效。
   实现 这里借助setTimeout来做一个简单的实现，加上一个状态位valid来表示当前函数是否处于工作状态
+
+    节流例子，像dom的拖拽，如果用消抖的话，就会出现卡顿的感觉，因为只在停止的时候执行了一次，这个时候就应该用节流，在一定时间内多次执行，会流畅很多。
 
   function throttle (fn, delay) {
     let vaildFlag = true
